<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/first_child"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:orientation="vertical"
        tools:ignore="TextSizeCheck">

        <ImageButton

            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:importantForAccessibility="no"
            android:src="@drawable/baseline_settings_24"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        <TextView

            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="155dp"
            android:layout_marginEnd="24dp"
            android:gravity="end"
            android:text="@string/value"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="40sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
    <LinearLayout

        android:id="@+id/second_child"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:background="@color/white"
        tools:ignore="VisualLintBounds">
        <LinearLayout

            android:id="@+id/second_1_child"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            tools:ignore="ExtraText">
            <TextView
                android:id="@+id/second_1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textColor="@color/black"
                android:background="@drawable/gray_shape"
                android:layout_marginEnd="25dp"
                android:paddingTop="20dp"
                android:textAlignment="center"
                android:text="@string/_ac"
                android:textSize="30sp"
                />

            <TextView
                android:id="@+id/second_2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textColor="@color/black"
                android:background="@drawable/gray_shape"
                android:layout_marginEnd="25dp"
                android:paddingTop="20dp"
                android:textAlignment="center"
                android:text="@string/c"
                android:textSize="30sp"
                />

            <TextView
                android:id="@+id/second_3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textColor="@color/black"
                android:background="@drawable/gray_shape"
                android:layout_marginEnd="25dp"
                android:paddingTop="20dp"
                android:textAlignment="center"
                android:text="@string/div"
                android:textSize="30sp"
                />

            <TextView
                android:id="@+id/second_4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/orange_shape"
                android:paddingTop="20dp"
                android:text="@string/di"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_2_child"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/second_5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textColor="@color/white"
                android:background="@drawable/black_shape"
                android:layout_marginEnd="25dp"
                android:paddingTop="20dp"
                android:textAlignment="center"
                android:text="@string/_7"
                android:textSize="30sp"
                />

            <TextView
                android:id="@+id/second_6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textColor="@color/white"
                android:background="@drawable/black_shape"
                android:layout_marginEnd="25dp"
                android:paddingTop="20dp"
                android:textAlignment="center"
                android:text="@string/_8"
                android:textSize="30sp"
                />

            <TextView
                android:id="@+id/second_7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textColor="@color/white"
                android:background="@drawable/black_shape"
                android:layout_marginEnd="25dp"
                android:paddingTop="20dp"
                android:textAlignment="center"
                android:text="@string/_9"
                android:textSize="30sp"
                />

            <TextView
                android:id="@+id/second_8"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/orange_shape"
                android:paddingTop="20dp"
                android:text="@string/x"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_3_child"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textColor="@color/white"
                android:background="@drawable/black_shape"
                android:layout_marginEnd="25dp"
                android:paddingTop="20dp"
                android:textAlignment="center"
                android:text="@string/_4"
                android:textSize="30sp"
                />
            <TextView
                android:id="@+id/second_9"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textColor="@color/white"
                android:background="@drawable/black_shape"
                android:layout_marginEnd="25dp"
                android:paddingTop="20dp"
                android:textAlignment="center"
                android:text="@string/_5"
                android:textSize="30sp"
                />
            <TextView
                android:id="@+id/second_10"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textColor="@color/white"
                android:background="@drawable/black_shape"
                android:layout_marginEnd="25dp"
                android:paddingTop="20dp"
                android:textAlignment="center"
                android:text="@string/_6"
                android:textSize="30sp"
                />

            <TextView
                android:id="@+id/second_11"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/orange_shape"
                android:paddingTop="10dp"
                android:text="@string/_m"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/second_4_child"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/second_12"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textColor="@color/white"
                android:background="@drawable/black_shape"
                android:layout_marginEnd="25dp"
                android:paddingTop="20dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:text="@string/_1"
                android:textSize="30sp"/>
            <TextView
                android:id="@+id/second_13"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textColor="@color/white"
                android:background="@drawable/black_shape"
                android:layout_marginEnd="25dp"
                android:paddingTop="20dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:text="@string/_2"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/second_14"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textColor="@color/white"
                android:background="@drawable/black_shape"
                android:layout_marginEnd="25dp"
                android:paddingTop="20dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:text="@string/_3"
                android:textSize="30sp"/>


            <TextView
                android:id="@+id/second_15"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/orange_shape"
                android:paddingTop="20dp"
                android:text="@string/_p"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/second_5_child"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/second_16"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textColor="@color/white"
                android:background="@drawable/black_shape"
                android:layout_marginEnd="25dp"
                android:paddingTop="16dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:text="@string/_0"
                android:textSize="30sp"/>
            <TextView
                android:id="@+id/second_17"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textColor="@color/white"
                android:background="@drawable/black_shape"
                android:layout_marginEnd="25dp"
                android:paddingTop="12dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:text="@string/_d"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/second_18"
                android:layout_width="170dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/orange_shape_rec"
                android:paddingTop="12dp"
                android:text="@string/_eq"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                tools:ignore="TextContrastCheck,TextSizeCheck" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>